libpq_fe.pas


unit libpq_fe;
interface

uses SysUtils, postgres_ext;

{
  Automatically converted by H2Pas 1.0.0 from libpq-fe.h
  The following command line parameters were used:
    -c
    -p
    libpq-fe.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
{$ifndef PLongint}
  PLongint  = ^Longint;
{$endif}
{$ifndef PSmallInt}
  PSmallInt = ^SmallInt;
{$endif}
{$ifndef PByte}
  PByte     = ^Byte;
{$endif}
{$ifndef PWord}
  PWord     = ^Word;
{$endif}
{$ifndef PDWord}
  PDWord    = ^DWord;
{$endif}
{$ifndef PDouble}
  PDouble   = ^Double;
{$endif}
  PFILE  = ^FILE;
  size_t = dword;
  Psize_t  = ^size_t;
  PIntegers = array of integer;
  PPChars = array of PChar;

{Type
P_PQconninfoOption  = ^_PQconninfoOption;
P_PQprintOpt  = ^_PQprintOpt;
PConnStatusType  = ^ConnStatusType;
PExecStatusType  = ^ExecStatusType;
PFILE  = ^FILE;
POid  = ^Oid;
PPGcancel  = ^PGcancel;
PPGconn  = ^PGconn;
PpgNotify  = ^pgNotify;
PpgresAttDesc  = ^pgresAttDesc;
PPGresult  = ^PGresult;
PPGTransactionStatusType  = ^PGTransactionStatusType;
PPGVerbosity  = ^PGVerbosity;
PPostgresPollingStatusType  = ^PostgresPollingStatusType;
PPQArgBlock  = ^PQArgBlock;
Ppqbool  = ^pqbool;
PPQconninfoOption  = ^PQconninfoOption;
PPQprintOpt  = ^PQprintOpt;
Psize_t  = ^size_t;}


{-------------------------------------------------------------------------
 *
 * libpq-fe.h
 *	  This file contains definitions for structures and
 *	  externs for functions used by frontend postgres applications.
 *
 * Portions Copyright (c) 1996-2009, PostgreSQL Global Development Group
 * Portions Copyright (c) 1994, Regents of the University of California
 *
 * $PostgreSQL: pgsql/src/interfaces/libpq/libpq-fe.h,v 1.147 2009/06/11 14:49:14 momjian Exp $
 *
 *-------------------------------------------------------------------------
  }
{
 * Option flags for PQcopyResult
  }

const
   libpq                      = 'libpq.dll';

   PG_COPYRES_ATTRS = $01;
{ Implies PG_COPYRES_ATTRS  }
   PG_COPYRES_TUPLES = $02;   
   PG_COPYRES_EVENTS = $04;   
   PG_COPYRES_NOTICEHOOKS = $08;   
{ Application-visible enum types  }
{
	 * Although it is okay to add to this list, values which become unused
	 * should never be removed, nor should constants be redefined - that would
	 * break compatibility with existing code.
	  }
{ Non-blocking mode only below here  }
{
	 * The existence of these should never be relied upon - they should only
	 * be used for user feedback or similar purposes.
	  }
{ Waiting for connection to be made.   }
{ Connection OK; waiting to send.	    }
{ Waiting for a response from the
										 * postmaster.		   }
{ Received authentication; waiting for
								 * backend startup.  }
{ Negotiating environment.  }
{ Negotiating SSL.  }
{ Internal state: connect() needed  }

{ Error when no password was given.  }
{ Note: depending on this is deprecated; use PQconnectionNeedsPassword().  }

   PQnoPasswordSupplied = 'fe_sendauth: no password supplied\n';
type

   PConnStatusType = ^ConnStatusType;
   ConnStatusType = (CONNECTION_OK,CONNECTION_BAD,CONNECTION_STARTED,
     CONNECTION_MADE,CONNECTION_AWAITING_RESPONSE,
     CONNECTION_AUTH_OK,CONNECTION_SETENV,CONNECTION_SSL_STARTUP,
     CONNECTION_NEEDED);
{ These two indicate that one may	   }
{ use select before polling again.    }
{ unused; keep for awhile for backwards
								 * compatibility  }

   PPostgresPollingStatusType = ^PostgresPollingStatusType;
   PostgresPollingStatusType = (PGRES_POLLING_FAILED = 0,PGRES_POLLING_READING,
     PGRES_POLLING_WRITING,PGRES_POLLING_OK,
     PGRES_POLLING_ACTIVE);
{ empty query string was executed  }
{ a query command that doesn't return
								 * anything was executed properly by the
								 * backend  }
{ a query command that returns tuples was
								 * executed properly by the backend, PGresult
								 * contains the result tuples  }
{ Copy Out data transfer in progress  }
{ Copy In data transfer in progress  }
{ an unexpected response was recv'd from the
								 * backend  }
{ notice or warning message  }
{ query failed  }

   PExecStatusType = ^ExecStatusType;
   ExecStatusType = (PGRES_EMPTY_QUERY = 0,PGRES_COMMAND_OK,
     PGRES_TUPLES_OK,PGRES_COPY_OUT,PGRES_COPY_IN,
     PGRES_BAD_RESPONSE,PGRES_NONFATAL_ERROR,
     PGRES_FATAL_ERROR);
{ connection idle  }
{ command in progress  }
{ idle, within transaction block  }
{ idle, within failed transaction  }
{ cannot determine status  }

   PPGTransactionStatusType = ^PGTransactionStatusType;
   PGTransactionStatusType = (PQTRANS_IDLE,PQTRANS_ACTIVE,PQTRANS_INTRANS,
     PQTRANS_INERROR,PQTRANS_UNKNOWN);
{ single-line error messages  }
{ recommended style  }
{ all the facts, ma'am  }

   PPGVerbosity = ^PGVerbosity;
   PGVerbosity = (PQERRORS_TERSE,PQERRORS_DEFAULT,PQERRORS_VERBOSE
     );
{ PGconn encapsulates a connection to the backend.
 * The contents of this struct are not supposed to be known to applications.
  }
   //pg_conn = PGconn;
   PPGconn = pointer;
{ PGresult encapsulates the result of a query (or more precisely, of a single
 * SQL command --- a query string given to PQsendQuery can contain multiple
 * commands and thus return multiple PGresult objects).
 * The contents of this struct are not supposed to be known to applications.
  }
   //pg_result = PGresult;
   PPGresult = pointer;
{ PGcancel encapsulates the information needed to cancel a running
 * query on an existing connection.
 * The contents of this struct are not supposed to be known to applications.
  }
   //pg_cancel = PGcancel;
   PPGcancel = pointer;
{ PGnotify represents the occurrence of a NOTIFY message.
 * Ideally this would be an opaque typedef, but it's so simple that it's
 * unlikely to change.
 * NOTE: in Postgres 6.4 and later, the be_pid is the notifying backend's,
 * whereas in earlier versions it was always your own backend's PID.
  }
{ notification condition name  }
{ process ID of notifying server process  }
{ notification parameter  }
{ Fields below here are private to libpq; apps should not use 'em  }
{ list link  }

   PpgNotify = ^pgNotify;
   pgNotify = record
        relname : PChar;
        be_pid : longint;
        extra : PChar;
        next : PpgNotify;
     end;
{ Function types for notice-handling callbacks  }


   PQnoticeReceiver = procedure (arg:pointer; res:PPGresult); cdecl;


   PQnoticeProcessor = procedure (arg:pointer; message:PChar); cdecl;
{ Print options for PQprint()  }

   Ppqbool = ^pqbool;
   pqbool = char;
{ print output field headings and row count  }
{ fill align the fields  }
{ old brain dead format  }
{ output html tables  }
{ expand tables  }
{ use pager for output if needed  }
{ field separator  }
{ insert to HTML <table ...>  }
{ HTML <caption>  }
{ null terminated array of replacement field
								 * names  }

   P_PQprintOpt = ^_PQprintOpt;
   _PQprintOpt = record
        header : pqbool;
        align : pqbool;
        standard : pqbool;
        html3 : pqbool;
        expanded : pqbool;
        pager : pqbool;
        fieldSep : PChar;
        tableOpt : PChar;
        caption : PChar;
        fieldName : ^PChar;
     end;
   PQprintOpt = _PQprintOpt;
   PPQprintOpt = ^PQprintOpt;
{ ----------------
 * Structure for the conninfo parameter definitions returned by PQconndefaults
 * or PQconninfoParse.
 *
 * All fields except "val" point at static strings which must not be altered.
 * "val" is either NULL or a malloc'd current-value string.  PQconninfoFree()
 * will release both the val strings and the PQconninfoOption array itself.
 * ----------------
  }
{ The keyword of the option			 }
{ Fallback environment variable name	 }
{ Fallback compiled in default value	 }
{ Option's current value, or NULL		  }
{ Label for field in connect dialog	 }
{ Indicates how to display this field in a
								 * connect dialog. Values are: "" Display
								 * entered value as is "*" Password field -
								 * hide value "D"  Debug option - don't show
								 * by default  }
{ Field size in characters for dialog	 }

   P_PQconninfoOption = ^_PQconninfoOption;
   _PQconninfoOption = record
        keyword : PChar;
        envvar : PChar;
        compiled : PChar;
        val : PChar;
        _label : PChar;
        dispchar : PChar;
        dispsize : longint;
     end;
   PQconninfoOption = _PQconninfoOption;
   PPQconninfoOption = ^PQconninfoOption;
{ ----------------
 * PQArgBlock -- structure for PQfn() arguments
 * ----------------
  }
{ can't use void (dec compiler barfs)	  }

   PPQArgBlock = ^PQArgBlock;
   PQArgBlock = record
        len : longint;
        isint : longint;
        u : record
            case longint of
               0 : ( ptr : Plongint );
               1 : ( integer : longint );
            end;
     end;
{ ----------------
 * PGresAttDesc -- Data about a single attribute (column) of a query result
 * ----------------
  }
{ column name  }
{ source table, if known  }
{ source column, if known  }
{ format code for value (text/binary)  }
{ type id  }
{ type size  }
{ type-specific modifier info  }

   PpgresAttDesc = ^pgresAttDesc;
   pgresAttDesc = record
        name : PChar;
        tableid : Oid;
        columnid : longint;
        format : longint;
        typid : Oid;
        typlen : longint;
        atttypmod : longint;
     end;

   pgthreadlock_t = procedure (acquire:longint); cdecl;

   { Exported functions of libpq }
{ ===	in fe-connect.c ===  }
{ make a new client connection to the backend  }
{ Asynchronous (non-blocking)  }


function PQconnectStart(conninfo:PChar):PPGconn; cdecl;
function PQconnectPoll(conn:PPGconn):PostgresPollingStatusType; cdecl;
{ Synchronous (blocking)  }

function PQconnectdb(conninfo:PChar):PPGconn; cdecl;
function PQsetdbLogin(pghost:PChar; pgport:PChar; pgoptions:PChar; pgtty:PChar; dbName:PChar;
           login:PChar; pwd:PChar):PPGconn; cdecl;
function PQsetdb(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME : PAnsiChar) : PPGconn;

{ close the current connection and free the PGconn data structure  }
procedure PQfinish(conn:PPGconn); cdecl;
{ get info about connection options known to PQconnectdb  }
function PQconndefaults:PPQconninfoOption; cdecl;
{ parse connection options in same way as PQconnectdb  }

function PQconninfoParse(conninfo:PChar; errmsg:PPchar):PPQconninfoOption; cdecl;
{ free the data structure returned by PQconndefaults() or PQconninfoParse()  }
procedure PQconninfoFree(connOptions:PPQconninfoOption); cdecl;
{
 * close the current connection and restablish a new one with the same
 * parameters
  }
{ Asynchronous (non-blocking)  }
function PQresetStart(conn:PPGconn):longint; cdecl;
function PQresetPoll(conn:PPGconn):PostgresPollingStatusType; cdecl;
{ Synchronous (blocking)  }
procedure PQreset(conn:PPGconn); cdecl;
{ request a cancel structure  }
function PQgetCancel(conn:PPGconn):PPGcancel; cdecl;
{ free a cancel structure  }
procedure PQfreeCancel(cancel:PPGcancel); cdecl;
{ issue a cancel request  }
function PQcancel(cancel:PPGcancel; errbuf:PChar; errbufsize:longint):longint; cdecl;
{ backwards compatible version of PQcancel; not thread-safe  }
function PQrequestCancel(conn:PPGconn):longint; cdecl;

{ Accessor functions for PGconn objects  }
